; ModuleID = '/home/carl/AnghaBench/tmux/extr_cmd-queue.c_cmdq_name.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_cmd-queue.c_cmdq_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.client = type { %struct.client* }

@cmdq_name.s = internal global [256 x i8] zeroinitializer, align 16
@.str = private unnamed_addr constant [9 x i8] c"<global>\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"<%s>\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"<%p>\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.client*)* @cmdq_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @cmdq_name(%struct.client* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.client*, align 8
  store %struct.client* %0, %struct.client** %3, align 8
  %4 = load %struct.client*, %struct.client** %3, align 8
  %5 = icmp eq %struct.client* %4, null
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %21

7:                                                ; preds = %1
  %8 = load %struct.client*, %struct.client** %3, align 8
  %9 = getelementptr inbounds %struct.client, %struct.client* %8, i32 0, i32 0
  %10 = load %struct.client*, %struct.client** %9, align 8
  %11 = icmp ne %struct.client* %10, null
  br i1 %11, label %12, label %17

12:                                               ; preds = %7
  %13 = load %struct.client*, %struct.client** %3, align 8
  %14 = getelementptr inbounds %struct.client, %struct.client* %13, i32 0, i32 0
  %15 = load %struct.client*, %struct.client** %14, align 8
  %16 = call i32 @xsnprintf(i8* getelementptr inbounds ([256 x i8], [256 x i8]* @cmdq_name.s, i64 0, i64 0), i32 256, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), %struct.client* %15)
  br label %20

17:                                               ; preds = %7
  %18 = load %struct.client*, %struct.client** %3, align 8
  %19 = call i32 @xsnprintf(i8* getelementptr inbounds ([256 x i8], [256 x i8]* @cmdq_name.s, i64 0, i64 0), i32 256, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0), %struct.client* %18)
  br label %20

20:                                               ; preds = %17, %12
  store i8* getelementptr inbounds ([256 x i8], [256 x i8]* @cmdq_name.s, i64 0, i64 0), i8** %2, align 8
  br label %21

21:                                               ; preds = %20, %6
  %22 = load i8*, i8** %2, align 8
  ret i8* %22
}

declare dso_local i32 @xsnprintf(i8*, i32, i8*, %struct.client*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
